# pest_format

./: Cargo.toml  index.html  package.json  pestformat_bg.wasm  wasm.d.ts  wasm.js  wasm_bg.wasm
docs/: README.md  index.html  package.json  pestformat.js  pestformat_bg.wasm  wasm.d.ts  wasm.js  wasm_bg.d.ts  wasm_bg.wasm
pkg/: pestformat.d.ts  pestformat.js  pestformat_bg.d.ts  pestformat_bg.wasm
src/: lib.rs
src/pages/: home.rs
