[package]
name = "pestformat"
version = "0.1.0"
authors = ["becker <github@deathbyescalator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2"
#console_error_panic_hook = "*"
pest_fmt = { git = "https://github.com/pest-parser/pest-fmt" }
